--- a/Propro-Client/Propro-Client.csproj
+++ b/Propro-Client/Propro-Client.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Logics\DIASwathConverter.cs" />
     <Compile Include="Logics\IConverter.cs" />
     <Compile Include="Logics\PRMConverter.cs" />
+    <Compile Include="Logics\ScanningSwathConvert.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\FeaturesUtil.cs" />
