引入mz精度控制,可以通过losslessMZ选项共用户选择是使用3位小数精度还是5位小数精度

--- a/Propro-Client/Propro-Client.csproj
+++ b/Propro-Client/Propro-Client.csproj
@@ -141,52 +141,52 @@
     <Compile Include="Constants\ExperimentType.cs" />
     <Compile Include="Constants\MsLevel.cs" />
     <Compile Include="Constants\SoftwareVersion.cs" />
-    <Compile Include="CSharpFastPFORCore\BinaryPacking.cs" />
-    <Compile Include="CSharpFastPFORCore\BitPacking.cs" />
-    <Compile Include="CSharpFastPFORCore\ByteIntegerCODEC.cs" />
-    <Compile Include="CSharpFastPFORCore\Composition.cs" />
-    <Compile Include="CSharpFastPFORCore\DeltaZigzagBinaryPacking.cs" />
-    <Compile Include="CSharpFastPFORCore\DeltaZigzagEncoding.cs" />
-    <Compile Include="CSharpFastPFORCore\DeltaZigzagVariableByte.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\Delta.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\IntegratedBinaryPacking.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\IntegratedBitPacking.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\IntegratedByteIntegerCODEC.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\IntegratedComposition.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\IntegratedIntCompressor.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\IntegratedIntegerCODEC.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\IntegratedVariableByte.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\SkippableIntegratedComposition.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\SkippableIntegratedIntegerCODEC.cs" />
-    <Compile Include="CSharpFastPFORCore\Differential\XorBinaryPacking.cs" />
-    <Compile Include="CSharpFastPFORCore\FastPFOR.cs" />
-    <Compile Include="CSharpFastPFORCore\FastPFOR128.cs" />
-    <Compile Include="CSharpFastPFORCore\IntCompressor.cs" />
-    <Compile Include="CSharpFastPFORCore\IntegerCODEC.cs" />
-    <Compile Include="CSharpFastPFORCore\IntWrapper.cs" />
-    <Compile Include="CSharpFastPFORCore\JustCopy.cs" />
-    <Compile Include="CSharpFastPFORCore\NewPFD.cs" />
-    <Compile Include="CSharpFastPFORCore\NewPFDS16.cs" />
-    <Compile Include="CSharpFastPFORCore\NewPFDS9.cs" />
-    <Compile Include="CSharpFastPFORCore\OptPFD.cs" />
-    <Compile Include="CSharpFastPFORCore\OptPFDS16.cs" />
-    <Compile Include="CSharpFastPFORCore\OptPFDS9.cs" />
-    <Compile Include="CSharpFastPFORCore\Port\Arrays.cs" />
-    <Compile Include="CSharpFastPFORCore\Port\BitSet.cs" />
-    <Compile Include="CSharpFastPFORCore\Port\ByteBuffer.cs" />
-    <Compile Include="CSharpFastPFORCore\Port\ByteOrder.cs" />
-    <Compile Include="CSharpFastPFORCore\Port\IntBuffer.cs" />
-    <Compile Include="CSharpFastPFORCore\Port\Integer.cs" />
-    <Compile Include="CSharpFastPFORCore\S16.cs" />
-    <Compile Include="CSharpFastPFORCore\S9.cs" />
-    <Compile Include="CSharpFastPFORCore\Simple16.cs" />
-    <Compile Include="CSharpFastPFORCore\Simple9.cs" />
-    <Compile Include="CSharpFastPFORCore\SkippableComposition.cs" />
-    <Compile Include="CSharpFastPFORCore\SkippableIntegerCODEC.cs" />
-    <Compile Include="CSharpFastPFORCore\Synth\ClusteredDataGenerator.cs" />
-    <Compile Include="CSharpFastPFORCore\Synth\UniformDataGenerator.cs" />
-    <Compile Include="CSharpFastPFORCore\Util.cs" />
-    <Compile Include="CSharpFastPFORCore\VariableByte.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\BinaryPacking.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\BitPacking.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\ByteIntegerCODEC.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Composition.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\DeltaZigzagBinaryPacking.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\DeltaZigzagEncoding.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\DeltaZigzagVariableByte.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\Delta.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\IntegratedBinaryPacking.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\IntegratedBitPacking.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\IntegratedByteIntegerCODEC.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\IntegratedComposition.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\IntegratedIntCompressor.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\IntegratedIntegerCODEC.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\IntegratedVariableByte.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\SkippableIntegratedComposition.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\SkippableIntegratedIntegerCODEC.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Differential\XorBinaryPacking.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\FastPFOR.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\FastPFOR128.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\IntCompressor.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\IntegerCODEC.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\IntWrapper.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\JustCopy.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\NewPFD.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\NewPFDS16.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\NewPFDS9.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\OptPFD.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\OptPFDS16.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\OptPFDS9.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Port\Arrays.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Port\BitSet.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Port\ByteBuffer.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Port\ByteOrder.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Port\IntBuffer.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Port\Integer.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\S16.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\S9.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Simple16.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Simple9.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\SkippableComposition.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\SkippableIntegerCODEC.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Synth\ClusteredDataGenerator.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Synth\UniformDataGenerator.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\Util.cs" />
+    <Compile Include="BugFixForCSharpFastPFORCore\VariableByte.cs" />
     <Compile Include="Domains\Aird\AirdInfo.cs" />
     <Compile Include="Domains\Aird\BlockIndex.cs" />
     <Compile Include="Domains\Aird\ParentFile.cs" />
@@ -220,11 +220,11 @@
     <Compile Include="Forms\Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
-    <Compile Include="Logics\DDAConverter.cs" />
-    <Compile Include="Logics\DIASwathConverter.cs" />
-    <Compile Include="Logics\IConverter.cs" />
-    <Compile Include="Logics\PRMConverter.cs" />
-    <Compile Include="Logics\ScanningSwathConvert.cs" />
+    <Compile Include="Converters\DDAConverter.cs" />
+    <Compile Include="Converters\DIASwathConverter.cs" />
+    <Compile Include="Converters\IConverter.cs" />
+    <Compile Include="Converters\PRMConverter.cs" />
+    <Compile Include="Converters\ScanningSwathConvert.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\FeaturesUtil.cs" />
