优化CompressUtil中函数的命名

--- a/Propro-Client/packages.config
+++ b/Propro-Client/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Alea" version="3.0.4" targetFramework="net48" />
+  <package id="FSharp.Core" version="4.7.2" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
 </packages>
