--- a/Propro-Client/AirdPro.csproj
+++ b/Propro-Client/AirdPro.csproj
@@ -29,6 +29,8 @@
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -105,6 +107,18 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Alea, Version=3.0.0.0, Culture=neutral, PublicKeyToken=ba52afc3c2e933d6, processorArchitecture=MSIL">
+      <HintPath>..\packages\Alea.3.0.4\lib\net45\Alea.dll</HintPath>
+    </Reference>
+    <Reference Include="Alea.IL, Version=3.0.0.0, Culture=neutral, PublicKeyToken=ba52afc3c2e933d6, processorArchitecture=MSIL">
+      <HintPath>..\packages\Alea.3.0.4\lib\net45\Alea.IL.dll</HintPath>
+    </Reference>
+    <Reference Include="Alea.Parallel, Version=3.0.0.0, Culture=neutral, PublicKeyToken=ba52afc3c2e933d6, processorArchitecture=MSIL">
+      <HintPath>..\packages\Alea.3.0.4\lib\net45\Alea.Parallel.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Core, Version=4.7.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FSharp.Core.4.7.2\lib\net45\FSharp.Core.dll</HintPath>
+    </Reference>
     <Reference Include="IdentityModel, Version=3.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>ImportLibs\IdentityModel.dll</HintPath>
@@ -162,7 +176,9 @@
     <Compile Include="Constants\ByteOrder.cs" />
     <Compile Include="Constants\ExperimentType.cs" />
     <Compile Include="Constants\MsLevel.cs" />
+    <Compile Include="Constants\ProcessingStatus.cs" />
     <Compile Include="Constants\SoftwareVersion.cs" />
+    <Compile Include="Domains\Convert\JobParams.cs" />
     <Compile Include="ThirdParty\BugFixForCSharpFastPFORCore\BinaryPacking.cs" />
     <Compile Include="ThirdParty\BugFixForCSharpFastPFORCore\BitPacking.cs" />
     <Compile Include="ThirdParty\BugFixForCSharpFastPFORCore\ByteIntegerCODEC.cs" />
@@ -218,8 +234,7 @@
     <Compile Include="Domains\Aird\Software.cs" />
     <Compile Include="Domains\Aird\SwathIndex.cs" />
     <Compile Include="Domains\Aird\TempScan.cs" />
-    <Compile Include="Domains\ConvertJobInfo.cs" />
-    <Compile Include="Domains\ConvertResult.cs" />
+    <Compile Include="Domains\Convert\JobInfo.cs" />
     <Compile Include="Domains\Log.cs" />
     <Compile Include="Domains\Result.cs" />
     <Compile Include="Domains\Aird\TempIndex.cs" />
@@ -523,8 +538,16 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(ProjectDir)ImportLibs\*.*" "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="..\packages\Alea.3.0.4\build\Alea.targets" Condition="Exists('..\packages\Alea.3.0.4\build\Alea.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Alea.3.0.4\build\Alea.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Alea.3.0.4\build\Alea.targets'))" />
+  </Target>
 </Project>
