--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -147,8 +147,10 @@
     <Compile Include="Constants\SoftwareVersion.cs" />
     <Compile Include="Converters\Common.cs" />
     <Compile Include="Domains\Aird\DataProcessing.cs" />
+    <Compile Include="Domains\Aird\Layers.cs" />
     <Compile Include="Domains\Job\JobParams.cs" />
     <Compile Include="Domains\Job\RemoteConvertJob.cs" />
+    <Compile Include="Domains\Sort\IntArrayNode.cs" />
     <Compile Include="Forms\CustomPathForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +158,7 @@
       <DependentUpon>CustomPathForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Redis\RedisClient.cs" />
+    <Compile Include="Test\StackZDPDTest.cs" />
     <Compile Include="ThirdParty\BugFixForCSharpFastPFORCore\BinaryPacking.cs" />
     <Compile Include="ThirdParty\BugFixForCSharpFastPFORCore\BitPacking.cs" />
     <Compile Include="ThirdParty\BugFixForCSharpFastPFORCore\ByteIntegerCODEC.cs" />
@@ -257,6 +260,7 @@
     <Compile Include="ThirdParty\Zlib\ZlibCodec.cs" />
     <Compile Include="ThirdParty\Zlib\ZlibConstants.cs" />
     <Compile Include="ThirdParty\Zlib\ZlibStream.cs" />
+    <Compile Include="Utils\StackCompressUtil.cs" />
     <EmbeddedResource Include="Forms\AirdForm.resx">
       <DependentUpon>AirdForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -505,13 +509,19 @@
   <ItemGroup />
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.3</Version>
+      <Version>13.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="OptimizedPriorityQueue">
+      <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis">
       <Version>2.2.4</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="xunit">
+      <Version>2.4.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
