--- a/Domains/Domains.csproj
+++ b/Domains/Domains.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Domains\Aird\CV.cs" />
     <Compile Include="Domains\Aird\DataProcessing.cs" />
     <Compile Include="Domains\Aird\Enums\AirdType.cs" />
+    <Compile Include="Domains\Aird\Enums\ResultCodeEnum.cs" />
     <Compile Include="Domains\Aird\Enums\MsLevel.cs" />
     <Compile Include="Domains\Aird\Features.cs" />
     <Compile Include="Domains\Aird\Instrument.cs" />
@@ -65,6 +66,9 @@
     <Compile Include="Domains\Job\JobParams.cs" />
     <Compile Include="Domains\Job\RemoteConvertJob.cs" />
     <Compile Include="Domains\Log.cs" />
+    <Compile Include="Domains\Parser\SpectrumDetail.cs" />
+    <Compile Include="Domains\Parser\MsCycle.cs" />
+    <Compile Include="Domains\Parser\MzIntensityPairs.cs" />
     <Compile Include="Domains\Scan\TempIndex.cs" />
     <Compile Include="Domains\Scan\TempScan.cs" />
     <Compile Include="Domains\Scan\TempScanSZDPD.cs" />
