--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -256,6 +256,9 @@
     <PackageReference Include="xunit">
       <Version>2.4.2-pre.12</Version>
     </PackageReference>
+    <PackageReference Include="ZstdNet">
+      <Version>1.4.5</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Compress\Compress.csproj">
