--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -248,10 +248,10 @@
       <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis">
-      <Version>2.2.88</Version>
+      <Version>2.5.27-prerelease</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>6.0.2-mauipre.1.22054.8</Version>
+      <Version>6.0.2-mauipre.1.22102.15</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.2-pre.12</Version>
